--- a/styles/style.css
+++ b/styles/style.css
@@ -248,32 +248,32 @@ body {
   font-family: "Cabin Sketch", cursive;
   height: 100vh;
   transition: all 1s;
+  background-size: 100% 100%;
 }
 body .title {
   text-align: center;
-  font-size: calc(45px + (100 - 45) * ((100vw - 320px) / (1680 - 320)));
+  font-size: calc(55px + (100 - 55) * ((100vw - 320px) / (1680 - 320)));
   margin: 0;
-  padding-top: calc(10px + (70 - 10) * ((100vw - 320px) / (1680 - 320)));
+  padding-top: calc(10px + (60 - 10) * ((100vw - 320px) / (1680 - 320)));
   transition: all 0.7s;
-  height: 25vh;
+  height: 23%;
 }
 body .gameBoard {
-  height: 78%;
+  height: 77%;
   position: relative;
   display: none;
 }
 body .gameBoard .clock {
   text-align: center;
-  font-size: 3rem;
+  font-size: 3.5rem;
   justify-content: space-between;
-  height: 5%;
   padding: 0;
   margin-bottom: 30px;
 }
 body .gameBoard .clock button {
   font-family: "Cabin Sketch", cursive;
   border: none;
-  font-size: 3rem;
+  font-size: 3.5rem;
   padding: 0;
   height: 100%;
   background: none;
@@ -284,6 +284,8 @@ body .gameBoard .container {
   justify-content: space-between;
   align-items: space-between;
   display: none;
+  padding: 1.5%;
+  background: rgba(188, 80, 139, 0.3);
 }
 body .gameBoard .container .card {
   position: relative;
@@ -293,14 +295,12 @@ body .gameBoard .container .card {
   transition: all 0.5s;
 }
 body .gameBoard .container .card.matched {
-  border: 5px solid pink;
-  transform: scale(0.8);
-  opacity: 0.8;
+  transform: scale(0.5);
+  opacity: 0.7;
   border-radius: 50px;
 }
 body .gameBoard .container .card.matched .front,
 body .gameBoard .container .card.matched .back {
-  transform: scale(0.8);
   border-radius: 45px;
 }
 body .gameBoard .container .card.flipped .front {
@@ -354,20 +354,22 @@ body .descriptionContainer .levelContainer {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  margin: 0 auto;
+  width: 80%;
 }
 body .descriptionContainer .levelContainer button {
   font-family: "Cabin Sketch", cursive;
   font-size: 2.5rem;
   border: none;
-  padding: 20px 8%;
+  padding: 12px 5%;
   border-radius: 50px;
   margin-top: 50px;
-  box-shadow: 0 10px 0 blue;
+  box-shadow: 8px 8px 0 blue;
   transition: all 0.5s;
 }
 body .descriptionContainer .levelContainer button:focus, body .descriptionContainer .levelContainer button:active, body .descriptionContainer .levelContainer button:hover {
-  transform: translateY(5px);
-  box-shadow: 0 5px blue;
+  transform: translate(4px, 4px);
+  box-shadow: 4px 4px blue;
 }
 body .descriptionContainer .gameStart {
   display: flex;
@@ -377,41 +379,42 @@ body .descriptionContainer .gameStart button {
   font-family: "Cabin Sketch", cursive;
   font-size: 2.5rem;
   border: none;
-  padding: 20px 8%;
+  padding: 12px 5%;
   border-radius: 50px;
   margin-top: 50px;
-  box-shadow: 0 10px 0 blue;
+  box-shadow: 8px 8px 0 blue;
   transition: all 0.5s;
 }
 body .descriptionContainer .gameStart button:focus, body .descriptionContainer .gameStart button:active, body .descriptionContainer .gameStart button:hover {
-  transform: translateY(5px);
-  box-shadow: 0 5px blue;
+  transform: translate(4px, 4px);
+  box-shadow: 4px 4px blue;
 }
 body .alidin {
   position: absolute;
   top: 0;
-  height: 60vh;
+  height: 55vh;
   width: 40vw;
   opacity: 0;
   transition: opacity 1s;
 }
-body .alidin .textMatch {
+body .textMatch {
+  background: skyblue;
   position: absolute;
   font-size: 2rem;
-  top: 10%;
-  left: 70%;
-  background: white;
+  top: 15%;
+  left: 26%;
   text-align: center;
-  padding: 10px 10px;
-  width: 70%;
+  padding: 10px;
   opacity: 0;
+  color: blue;
+  margin: 0;
 }
 body .elsa {
   position: absolute;
   top: 0;
   right: 0;
-  height: 50vh;
-  width: 30vw;
+  height: 55vh;
+  width: 40vw;
   opacity: 0;
   transition: opacity 1s;
 }
@@ -429,66 +432,235 @@ body .elsa .snowFlake:nth-child(even) {
   animation: secondSnowFlake 2.5s ease 1;
   z-index: 1;
 }
-body .resultContainer {
-  display: none;
-  background: white;
-  z-index: 2;
-  padding: 0;
+body .mickeyMouse {
+  position: absolute;
+  bottom: 30%;
+  left: 20%;
+  width: 30%;
+  height: 30%;
+  animation: mickeyMouse 30s ease infinite;
+  z-index: -1;
 }
-body .resultContainer .result {
-  width: 100%;
+body .result {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background: white;
+  background: rgba(188, 80, 139, 0.3);
   z-index: 2;
-  padding: 20px;
+  padding: 0;
+  width: 100vw;
+  height: 50vh;
   text-align: center;
 }
-body .resultContainer .result h2 {
-  font-size: 8rem;
-  margin-top: 0;
+body .result h2 {
+  font-size: 14rem;
+  margin: 0 0 30px;
   z-index: 2;
 }
-body .resultContainer .result .resultDescription {
+body .result p {
   font-size: 4rem;
   z-index: 2;
 }
+body .result .playAgain button {
+  font-family: "Cabin Sketch", cursive;
+  font-size: 2.5rem;
+  border: none;
+  padding: 12px 5%;
+  border-radius: 50px;
+  margin-top: 50px;
+  box-shadow: 8px 8px 0 blue;
+  transition: all 0.5s;
+}
+body .result .playAgain button:focus, body .result .playAgain button:active, body .result .playAgain button:hover {
+  transform: translate(4px, 4px);
+  box-shadow: 4px 4px blue;
+}
 
+@media (max-width: 1024px) {
+  html .wrapper {
+    width: 60%;
+  }
+
+  body .descriptionContainer .levelContainer {
+    width: 100%;
+  }
+}
+@media (max-width: 768px) {
+  html .wrapper {
+    width: 70%;
+  }
+
+  body .title {
+    height: 22%;
+  }
+  body .gameBoard {
+    height: 70%;
+  }
+  body .gameBoard .clock {
+    font-size: 2.5rem;
+  }
+  body .gameBoard .clock button {
+    font-size: 2.5rem;
+  }
+  body .descriptionContainer .wrapper {
+    padding: 0;
+  }
+  body .descriptionContainer .wrapper p {
+    line-height: 30px;
+    width: 100%;
+  }
+  body .descriptionContainer .wrapper .levelContainer {
+    flex-direction: column;
+    width: 35%;
+  }
+  body .descriptionContainer .wrapper .levelContainer button {
+    margin-top: 30px;
+  }
+  body .textMatch {
+    top: 18%;
+    font-size: 1.6rem;
+    left: 15%;
+    padding: 5px;
+  }
+  body .alidin,
+body .elsa {
+    height: 45vh;
+  }
+  body .result {
+    height: 50vh;
+  }
+  body .result h2 {
+    font-size: 10rem;
+  }
+}
+@media (max-width: 420px) {
+  html .wrapper {
+    width: 85%;
+  }
+
+  body .gameBoard .clock {
+    font-size: 2.2rem;
+  }
+  body .gameBoard .clock button {
+    font-size: 2.2rem;
+  }
+  body .result {
+    padding: 15px;
+  }
+  body .result h2 {
+    font-size: 8rem;
+  }
+  body .result p {
+    font-size: 3rem;
+  }
+}
+@keyframes mickeyMouse {
+  0% {
+    bottom: 35%;
+    left: 25%;
+  }
+  5% {
+    bottom: 32.5%;
+    left: 22.5%;
+  }
+  10% {
+    bottom: 30%;
+    left: 20%;
+  }
+  15% {
+    bottom: 27.5%;
+    left: 17.5%;
+  }
+  20% {
+    bottom: 25%;
+    left: 15%;
+  }
+  25% {
+    bottom: 22.5%;
+    left: 12.5%;
+  }
+  30% {
+    bottom: 20%;
+    left: 10%;
+  }
+  35% {
+    left: 12.5%;
+  }
+  40% {
+    left: 15%;
+  }
+  50% {
+    left: 17.5%;
+  }
+  55% {
+    left: 20%;
+  }
+  60% {
+    left: 22.5%;
+  }
+  65% {
+    left: 25%;
+  }
+  70% {
+    bottom: 22.5%;
+    left: 27.5%;
+  }
+  75% {
+    bottom: 25%;
+    left: 30%;
+  }
+  80% {
+    bottom: 27.5%;
+    left: 32.5%;
+  }
+  85% {
+    bottom: 30%;
+    left: 35%;
+  }
+  90% {
+    left: 37.5%;
+  }
+  95% {
+    left: 40%;
+  }
+  100% {
+    bottom: 32.5%;
+  }
+}
 @keyframes firstSnowFlake {
   0% {
-    top: 20%;
+    top: 15%;
     left: 0;
   }
   20% {
-    top: 25%;
-    left: -40%;
+    top: 20%;
+    left: -20%;
   }
   40% {
-    left: -30%;
+    left: -10%;
   }
   60% {
-    left: -40%;
+    left: -20%;
   }
   70% {
-    left: -30%;
+    left: -10%;
   }
   80% {
-    left: -40%;
+    left: -20%;
   }
   100% {
-    top: 30%;
-    left: -50%;
+    top: 15%;
+    left: -30%;
   }
 }
 @keyframes secondSnowFlake {
   0% {
-    top: 20%;
+    top: 15%;
     left: 0;
   }
   20% {
-    top: 35%;
+    top: 30%;
     left: -10%;
   }
   40% {
@@ -505,30 +677,6 @@ body .resultContainer .result .resultDescription {
   }
   100% {
     top: 35%;
-    left: -50%;
-  }
-}
-@media (max-width: 1024px) {
-  html .wrapper {
-    width: 60%;
-  }
-}
-@media (max-width: 768px) {
-  html .wrapper {
-    width: 85%;
-  }
-
-  .level2CardWidth.wrapper {
-    width: 95%;
-  }
-
-  body .container {
-    height: 60%;
-    padding: 0;
-  }
-}
-@media (max-width: 420px) {
-  body .container {
-    height: 50%;
+    left: -40%;
   }
 }
