--- a/partials/_main.scss
+++ b/partials/_main.scss
@@ -3,11 +3,11 @@ body {
     height: 100vh;
     transition: all 1s;
     // background-image: url(../assets/disneycastleBackground.gif);
-    background-size: 100% 100%;
-    
+    // background-size: 100% 100%;
+
     .title {
         text-align: center;
-        font-size: calc(55px + (100 - 55) * ((100vw - 320px) / (1680 - 320)));
+        font-size: calc(60px + (110 - 60) * ((100vw - 320px) / (1680 - 320)));
         margin: 0;
         padding-top: calc(10px + (60 - 10) * ((100vw - 320px) / (1680 - 320)));
         transition: all 0.7s;
@@ -22,7 +22,7 @@ body {
         
         .clock {
             text-align: center;
-            font-size: 3.5rem;
+            font-size: 3.3rem;
             justify-content: space-between;
             padding: 0;
             margin-bottom: 30px;
@@ -30,10 +30,15 @@ body {
             button {
                 font-family: 'Cabin Sketch', cursive;
                 border: none;
-                font-size: 3.5rem;
+                font-size: 3.3rem;
                 padding: 0;
                 height: 100%;
                 background: none;
+            }
+
+            .bonusTime {
+                opacity: 0;
+                transition: all 0.5s;
             }
         }
 
@@ -44,25 +49,19 @@ body {
             align-items: space-between;
             display: none;
             padding: 1.5%;
-            background: rgba(188,80,139,0.3);
+            background: rgba(188,80,139,0.2);
     
             .card {
                 position: relative;
                 perspective: 700px;
-                width: 23%;
-                height: 23%;
+                width: 21%;
+                height: 21%;
                 transition: all 0.5s;
     
                 &.matched {
                     transform: scale(0.5);
                     opacity: 0.7;
                     border-radius: 50px;
-                    
-                    .front,
-                    .back {
-                        // transform: scale(0.8);
-                        border-radius: 45px;
-                    }
                 }
     
                 &.flipped .front {
@@ -73,12 +72,10 @@ body {
                         transform: rotateY(180deg);
                     }
     
-                &.level2 {
-                    width: calc(100% / 5 - 5px);
-                }
-    
+                &.level2,
                 &.level3 {
-                    width: calc(100% / 6);
+                    width: 17%;
+                    height: 21%;
                 }
     
                 .front {
@@ -102,21 +99,64 @@ body {
                 }
             }
         }
+
+        .result {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            background: rgba(188,80,139,0.3);
+            z-index: 2;
+            padding: 0;
+            width: 100vw;
+            height: 50vh;
+            text-align: center;
+
+            h2 {
+                font-size: 14rem;
+                margin: 0 0 30px;
+                z-index: 2;
+            }
+
+            p {
+                font-size: 4rem;
+                z-index: 2;
+            }
+
+            .playAgain {
+                font-family: 'Cabin Sketch', cursive;
+                font-size: 2.5rem;
+                border: none;
+                padding: 12px 5%;
+                border-radius: 50px;
+                box-shadow: 8px 8px 0 blue;
+                transition: all 0.5s;
+
+                &:focus,
+                &:active,
+                &:hover {
+                    transform: translate(4px, 4px);
+                    box-shadow: 4px 4px blue;
+                }
+            }
+        }
     }
 
     .descriptionContainer {
 
         h2 {
-            font-size: calc(35px + (45 - 35) * ((100vw - 320px) / (1680 - 320)));
+            font-size: calc(33px + (60 - 33) * ((100vw - 320px) / (1680 - 320)));
             text-align: center;
         }
 
         p {
-            font-size: calc(18px + (25 - 18) * ((100vw - 320px) / (1680 - 320)));
-            line-height: 40px;
+            font-size: calc(16px + (25 - 16) * ((100vw - 320px) / (1680 - 320)));
+            line-height: 35px;
             text-align: center;
             margin: calc(25px + (40 - 25) * ((100vw - 320px) / (1680 - 320))) auto;
-            width: calc(275px + (750 - 275) * ((100vw - 320px) / (1680 - 320)));
+            width: 100%;
+            margin-bottom: 0;
+            height: 15vh;
 
             @include mq-650 {
                 margin: 0 auto;
@@ -128,15 +168,32 @@ body {
             display: flex;
             justify-content: space-between;
             flex-wrap: wrap;
-            margin: 0 auto;
-            width: 80%;
+            margin: 50px auto 0;
             @include button;
         }
 
         .gameStart {
             display: flex;
             justify-content: center;
-            @include button;
+
+            button {
+                font-family: 'Cabin Sketch', cursive;
+                font-size: 2.5rem;
+                border: none;
+                padding: 12px 5%;
+                border-radius: 50px;
+                box-shadow: 5px 5px 0 blue;
+                transition: all 0.5s;
+                width: 40%;
+                margin-top: 25px;
+
+                &:focus,
+                &:active,
+                &:hover {
+                    transform: translate(2.5px, 2.5px);
+                    box-shadow: 2.5px 2.5px blue;
+                }
+            }
         }
     }
 
@@ -147,7 +204,6 @@ body {
         width: 40vw;
         opacity: 0;
         transition: opacity 1s;
-
     }
 
     .textMatch {
@@ -198,35 +254,6 @@ body {
         animation: mickeyMouse 30s ease infinite;
         z-index: -1;
     }
-
-        
-    .result {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        background: rgba(188,80,139,0.3);
-        z-index: 2;
-        padding: 0;
-        width: 100vw;
-        height: 50vh;
-        text-align: center;
-
-        h2 {
-            font-size: 14rem;
-            margin: 0 0 30px;
-            z-index: 2;
-        }
-
-        p {
-            font-size: 4rem;
-            z-index: 2;
-        }
-
-        .playAgain {
-            @include button;
-        }
-    }
 }
 
 
@@ -261,6 +288,10 @@ body {
                     font-size: 2.5rem;
                 }
             }
+
+            .result h2 {
+                font-size: 11rem;
+            }
         }
 
         .descriptionContainer {
@@ -275,14 +306,10 @@ body {
     
                 .levelContainer {
                     flex-direction: column;
-                    width: 35%;
-
-                    button {
-                        margin-top: 30px;
-                    }
+                    width: 30%;
+                    margin-top: 0;
                 }
             }
-
         }
 
         .textMatch {
@@ -295,14 +322,7 @@ body {
         .alidin,
         .elsa {
             height: 45vh;
-        }
-
-        .result {
-            height: 50vh;
-
-            h2 {
-                font-size: 10rem;
-            }
+            width: 45vw;
         }
     }
 }
@@ -313,24 +333,46 @@ body {
     }
 
     body {
-        .gameBoard .clock {
-            font-size: 2.2rem;
+
+        .gameBoard {
+
+            .clock {
+                font-size: 2.1rem;
+        
+                button {
+                    font-size: 2.1rem;
+                }
+            }
+            
+            .result {
+                padding: 15px;
     
-            button {
-                font-size: 2.2rem;
+                 h2 {
+                     font-size: 8rem;
+                 }
+    
+                 p {
+                     font-size: 3rem;
+                 }
             }
         }
 
-        .result {
-            padding: 15px;
+        .descriptionContainer .wrapper {
 
-             h2 {
-                 font-size: 8rem;
-             }
+            margin-bottom: 100px;
 
-             p {
-                 font-size: 3rem;
-             }
+            h2 {
+                margin-top: 0;
+            }
+
+            .levelContainer {
+                width: 55%;
+            }
+        }
+
+        .alidin,
+        .elsa {
+            width: 50vw;
         }
     }
 }
