--- a/partials/_mixin.scss
+++ b/partials/_mixin.scss
@@ -1,3 +1,22 @@
+@mixin button () {
+    button {
+        font-family: 'Cabin Sketch', cursive;
+        font-size: 2.5rem;
+        border: none;
+        padding: 12px 6%;
+        border-radius: 50px;
+        margin: 0 0 30px;
+        box-shadow: 5px 5px 0 blue;
+        transition: all 0.5s;
+
+        &:focus,
+        &:active,
+        &:hover {
+            transform: translate(2.5px, 2.5px);
+            box-shadow: 2.5px 2.5px blue;
+        }
+    }
+}
 @mixin mq768 {
     @media(max-media: 768px) {
         @content;
@@ -7,25 +26,5 @@
 @mixin mq-650 {
     @media(max-width: 650px) {
         @content;
-    }
-}
-
-@mixin button () {
-    button {
-        font-family: 'Cabin Sketch', cursive;
-        font-size: 2.5rem;
-        border: none;
-        padding: 12px 5%;
-        border-radius: 50px;
-        margin-top: 50px;
-        box-shadow: 8px 8px 0 blue;
-        transition: all 0.5s;
-
-        &:focus,
-        &:active,
-        &:hover {
-            transform: translate(4px, 4px);
-            box-shadow: 4px 4px blue;
-        }
     }
 }
