--- a/styles/style.css
+++ b/styles/style.css
@@ -248,11 +248,10 @@ body {
   font-family: "Cabin Sketch", cursive;
   height: 100vh;
   transition: all 1s;
-  background-size: 100% 100%;
 }
 body .title {
   text-align: center;
-  font-size: calc(55px + (100 - 55) * ((100vw - 320px) / (1680 - 320)));
+  font-size: calc(60px + (110 - 60) * ((100vw - 320px) / (1680 - 320)));
   margin: 0;
   padding-top: calc(10px + (60 - 10) * ((100vw - 320px) / (1680 - 320)));
   transition: all 0.7s;
@@ -265,7 +264,7 @@ body .gameBoard {
 }
 body .gameBoard .clock {
   text-align: center;
-  font-size: 3.5rem;
+  font-size: 3.3rem;
   justify-content: space-between;
   padding: 0;
   margin-bottom: 30px;
@@ -273,10 +272,14 @@ body .gameBoard .clock {
 body .gameBoard .clock button {
   font-family: "Cabin Sketch", cursive;
   border: none;
-  font-size: 3.5rem;
+  font-size: 3.3rem;
   padding: 0;
   height: 100%;
   background: none;
+}
+body .gameBoard .clock .bonusTime {
+  opacity: 0;
+  transition: all 0.5s;
 }
 body .gameBoard .container {
   flex-wrap: wrap;
@@ -285,13 +288,13 @@ body .gameBoard .container {
   align-items: space-between;
   display: none;
   padding: 1.5%;
-  background: rgba(188, 80, 139, 0.3);
+  background: rgba(188, 80, 139, 0.2);
 }
 body .gameBoard .container .card {
   position: relative;
   perspective: 700px;
-  width: 23%;
-  height: 23%;
+  width: 21%;
+  height: 21%;
   transition: all 0.5s;
 }
 body .gameBoard .container .card.matched {
@@ -299,21 +302,15 @@ body .gameBoard .container .card.matched {
   opacity: 0.7;
   border-radius: 50px;
 }
-body .gameBoard .container .card.matched .front,
-body .gameBoard .container .card.matched .back {
-  border-radius: 45px;
-}
 body .gameBoard .container .card.flipped .front {
   transform: rotateY(0deg);
 }
 body .gameBoard .container .card.flipped .back {
   transform: rotateY(180deg);
 }
-body .gameBoard .container .card.level2 {
-  width: calc(100% / 5 - 5px);
-}
-body .gameBoard .container .card.level3 {
-  width: calc(100% / 6);
+body .gameBoard .container .card.level2, body .gameBoard .container .card.level3 {
+  width: 17%;
+  height: 21%;
 }
 body .gameBoard .container .card .front {
   position: absolute;
@@ -333,16 +330,52 @@ body .gameBoard .container .card .matchAnimation {
   height: 30px;
   position: absolute;
 }
+body .gameBoard .result {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background: rgba(188, 80, 139, 0.3);
+  z-index: 2;
+  padding: 0;
+  width: 100vw;
+  height: 50vh;
+  text-align: center;
+}
+body .gameBoard .result h2 {
+  font-size: 14rem;
+  margin: 0 0 30px;
+  z-index: 2;
+}
+body .gameBoard .result p {
+  font-size: 4rem;
+  z-index: 2;
+}
+body .gameBoard .result .playAgain {
+  font-family: "Cabin Sketch", cursive;
+  font-size: 2.5rem;
+  border: none;
+  padding: 12px 5%;
+  border-radius: 50px;
+  box-shadow: 8px 8px 0 blue;
+  transition: all 0.5s;
+}
+body .gameBoard .result .playAgain:focus, body .gameBoard .result .playAgain:active, body .gameBoard .result .playAgain:hover {
+  transform: translate(4px, 4px);
+  box-shadow: 4px 4px blue;
+}
 body .descriptionContainer h2 {
-  font-size: calc(35px + (45 - 35) * ((100vw - 320px) / (1680 - 320)));
+  font-size: calc(33px + (60 - 33) * ((100vw - 320px) / (1680 - 320)));
   text-align: center;
 }
 body .descriptionContainer p {
-  font-size: calc(18px + (25 - 18) * ((100vw - 320px) / (1680 - 320)));
-  line-height: 40px;
+  font-size: calc(16px + (25 - 16) * ((100vw - 320px) / (1680 - 320)));
+  line-height: 35px;
   text-align: center;
   margin: calc(25px + (40 - 25) * ((100vw - 320px) / (1680 - 320))) auto;
-  width: calc(275px + (750 - 275) * ((100vw - 320px) / (1680 - 320)));
+  width: 100%;
+  margin-bottom: 0;
+  height: 15vh;
 }
 @media (max-width: 650px) {
   body .descriptionContainer p {
@@ -354,22 +387,21 @@ body .descriptionContainer .levelContainer {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  margin: 0 auto;
-  width: 80%;
+  margin: 50px auto 0;
 }
 body .descriptionContainer .levelContainer button {
   font-family: "Cabin Sketch", cursive;
   font-size: 2.5rem;
   border: none;
-  padding: 12px 5%;
+  padding: 12px 6%;
   border-radius: 50px;
-  margin-top: 50px;
-  box-shadow: 8px 8px 0 blue;
+  margin: 0 0 30px;
+  box-shadow: 5px 5px 0 blue;
   transition: all 0.5s;
 }
 body .descriptionContainer .levelContainer button:focus, body .descriptionContainer .levelContainer button:active, body .descriptionContainer .levelContainer button:hover {
-  transform: translate(4px, 4px);
-  box-shadow: 4px 4px blue;
+  transform: translate(2.5px, 2.5px);
+  box-shadow: 2.5px 2.5px blue;
 }
 body .descriptionContainer .gameStart {
   display: flex;
@@ -381,13 +413,14 @@ body .descriptionContainer .gameStart button {
   border: none;
   padding: 12px 5%;
   border-radius: 50px;
-  margin-top: 50px;
-  box-shadow: 8px 8px 0 blue;
+  box-shadow: 5px 5px 0 blue;
   transition: all 0.5s;
+  width: 40%;
+  margin-top: 25px;
 }
 body .descriptionContainer .gameStart button:focus, body .descriptionContainer .gameStart button:active, body .descriptionContainer .gameStart button:hover {
-  transform: translate(4px, 4px);
-  box-shadow: 4px 4px blue;
+  transform: translate(2.5px, 2.5px);
+  box-shadow: 2.5px 2.5px blue;
 }
 body .alidin {
   position: absolute;
@@ -441,41 +474,6 @@ body .mickeyMouse {
   animation: mickeyMouse 30s ease infinite;
   z-index: -1;
 }
-body .result {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  background: rgba(188, 80, 139, 0.3);
-  z-index: 2;
-  padding: 0;
-  width: 100vw;
-  height: 50vh;
-  text-align: center;
-}
-body .result h2 {
-  font-size: 14rem;
-  margin: 0 0 30px;
-  z-index: 2;
-}
-body .result p {
-  font-size: 4rem;
-  z-index: 2;
-}
-body .result .playAgain button {
-  font-family: "Cabin Sketch", cursive;
-  font-size: 2.5rem;
-  border: none;
-  padding: 12px 5%;
-  border-radius: 50px;
-  margin-top: 50px;
-  box-shadow: 8px 8px 0 blue;
-  transition: all 0.5s;
-}
-body .result .playAgain button:focus, body .result .playAgain button:active, body .result .playAgain button:hover {
-  transform: translate(4px, 4px);
-  box-shadow: 4px 4px blue;
-}
 
 @media (max-width: 1024px) {
   html .wrapper {
@@ -503,6 +501,9 @@ body .result .playAgain button:focus, body .result .playAgain button:active, bod
   body .gameBoard .clock button {
     font-size: 2.5rem;
   }
+  body .gameBoard .result h2 {
+    font-size: 11rem;
+  }
   body .descriptionContainer .wrapper {
     padding: 0;
   }
@@ -512,10 +513,8 @@ body .result .playAgain button:focus, body .result .playAgain button:active, bod
   }
   body .descriptionContainer .wrapper .levelContainer {
     flex-direction: column;
-    width: 35%;
-  }
-  body .descriptionContainer .wrapper .levelContainer button {
-    margin-top: 30px;
+    width: 30%;
+    margin-top: 0;
   }
   body .textMatch {
     top: 18%;
@@ -526,12 +525,7 @@ body .result .playAgain button:focus, body .result .playAgain button:active, bod
   body .alidin,
 body .elsa {
     height: 45vh;
-  }
-  body .result {
-    height: 50vh;
-  }
-  body .result h2 {
-    font-size: 10rem;
+    width: 45vw;
   }
 }
 @media (max-width: 420px) {
@@ -540,19 +534,32 @@ body .elsa {
   }
 
   body .gameBoard .clock {
-    font-size: 2.2rem;
+    font-size: 2.1rem;
   }
   body .gameBoard .clock button {
-    font-size: 2.2rem;
+    font-size: 2.1rem;
   }
-  body .result {
+  body .gameBoard .result {
     padding: 15px;
   }
-  body .result h2 {
+  body .gameBoard .result h2 {
     font-size: 8rem;
   }
-  body .result p {
+  body .gameBoard .result p {
     font-size: 3rem;
+  }
+  body .descriptionContainer .wrapper {
+    margin-bottom: 100px;
+  }
+  body .descriptionContainer .wrapper h2 {
+    margin-top: 0;
+  }
+  body .descriptionContainer .wrapper .levelContainer {
+    width: 55%;
+  }
+  body .alidin,
+body .elsa {
+    width: 50vw;
   }
 }
 @keyframes mickeyMouse {
