--- a/partials/_main.scss
+++ b/partials/_main.scss
@@ -2,8 +2,8 @@ body {
     font-family: 'Cabin Sketch', cursive;
     height: 100vh;
     transition: all 1s;
-    // background-image: url(../assets/disneycastleBackground.gif);
-    // background-size: 100% 100%;
+    background-image: url(../assets/pexels-photo-1831234.jpeg);
+    background-size: 100% 100%;
 
     .title {
         text-align: center;
@@ -12,8 +12,66 @@ body {
         padding-top: calc(10px + (60 - 10) * ((100vw - 320px) / (1680 - 320)));
         transition: all 0.7s;
         height: 23%;
+        color: blue;
     }
 
+    .descriptionContainer {
+        color: blue;
+
+        h2 {
+            font-size: calc(33px + (60 - 33) * ((100vw - 320px) / (1680 - 320)));
+            text-align: center;
+        }
+
+        p {
+            font-size: calc(16px + (25 - 16) * ((100vw - 320px) / (1680 - 320)));
+            line-height: 35px;
+            text-align: center;
+            margin: calc(25px + (40 - 25) * ((100vw - 320px) / (1680 - 320))) auto;
+            width: 100%;
+            margin-bottom: 0;
+            height: 15vh;
+
+            @include mq-650 {
+                margin: 0 auto;
+                line-height: calc(30px + (35 - 30) * ((100vw - 320px) / (650 - 320)));
+            }
+        }
+        
+        .levelContainer {
+            display: flex;
+            justify-content: space-between;
+            flex-wrap: wrap;
+            margin: 50px auto 0;
+            @include button;
+        }
+
+        .gameStart {
+            display: flex;
+            justify-content: center;
+            margin-bottom: 100px;
+
+            button {
+                font-family: 'Cabin Sketch', cursive;
+                font-size: 2.5rem;
+                border: none;
+                padding: 12px 5%;
+                border-radius: 50px;
+                box-shadow: 5px 5px 0 blue;
+                transition: all 0.5s;
+                width: 40%;
+                margin-top: 25px;
+                background: white;
+
+                &:focus,
+                &:active,
+                &:hover {
+                    transform: translate(2.5px, 2.5px);
+                    box-shadow: 2.5px 2.5px blue;
+                }
+            }
+        }
+    }
     
     .gameBoard {
         height: 77%;
@@ -24,16 +82,34 @@ body {
             text-align: center;
             font-size: 3.3rem;
             justify-content: space-between;
+            align-items: center;
             padding: 0;
             margin-bottom: 30px;
+
+            .count,
+            .timer {
+                margin: 0;
+                background: white;
+                border-radius: 50px;
+                padding: 0.3% 1%;
+            }
 
             button {
                 font-family: 'Cabin Sketch', cursive;
                 border: none;
                 font-size: 3.3rem;
-                padding: 0;
                 height: 100%;
-                background: none;
+                border-radius: 50px;
+                padding: 0.3% 1%;
+                box-shadow: 5px 5px 0 blue;
+                background: white;
+
+                &:focus,
+                &:active,
+                &:hover {
+                    transform: translate(2.5px, 2.5px);
+                    box-shadow: 2.5px 2.5px blue;
+                }
             }
 
             .bonusTime {
@@ -49,7 +125,7 @@ body {
             align-items: space-between;
             display: none;
             padding: 1.5%;
-            background: rgba(188,80,139,0.2);
+            background: rgba(98,162,224,0.5);
     
             .card {
                 position: relative;
@@ -105,7 +181,7 @@ body {
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            background: rgba(188,80,139,0.3);
+            background: rgba(98,162,224,0.5);
             z-index: 2;
             padding: 0;
             width: 100vw;
@@ -131,6 +207,8 @@ body {
                 border-radius: 50px;
                 box-shadow: 8px 8px 0 blue;
                 transition: all 0.5s;
+                background: white;
+                margin-bottom: 50px;
 
                 &:focus,
                 &:active,
@@ -142,76 +220,36 @@ body {
         }
     }
 
-    .descriptionContainer {
+    .mickey {
+        position: absolute;
+        bottom: 0;
+        height: 40vh;
+        width: 30vw;
+    }
 
-        h2 {
-            font-size: calc(33px + (60 - 33) * ((100vw - 320px) / (1680 - 320)));
-            text-align: center;
-        }
-
-        p {
-            font-size: calc(16px + (25 - 16) * ((100vw - 320px) / (1680 - 320)));
-            line-height: 35px;
-            text-align: center;
-            margin: calc(25px + (40 - 25) * ((100vw - 320px) / (1680 - 320))) auto;
-            width: 100%;
-            margin-bottom: 0;
-            height: 15vh;
-
-            @include mq-650 {
-                margin: 0 auto;
-                line-height: calc(30px + (35 - 30) * ((100vw - 320px) / (650 - 320)));
-            }
-        }
-        
-        .levelContainer {
-            display: flex;
-            justify-content: space-between;
-            flex-wrap: wrap;
-            margin: 50px auto 0;
-            @include button;
-        }
-
-        .gameStart {
-            display: flex;
-            justify-content: center;
-
-            button {
-                font-family: 'Cabin Sketch', cursive;
-                font-size: 2.5rem;
-                border: none;
-                padding: 12px 5%;
-                border-radius: 50px;
-                box-shadow: 5px 5px 0 blue;
-                transition: all 0.5s;
-                width: 40%;
-                margin-top: 25px;
-
-                &:focus,
-                &:active,
-                &:hover {
-                    transform: translate(2.5px, 2.5px);
-                    box-shadow: 2.5px 2.5px blue;
-                }
-            }
-        }
+    .minnie {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        height: 40vh;
+        width: 30vw;
     }
 
     .alidin {
         position: absolute;
         top: 0;
-        height: 55vh;
+        height: 50vh;
         width: 40vw;
         opacity: 0;
         transition: opacity 1s;
     }
 
     .textMatch {
-        background: skyblue;
+        background: rgba(98,162,224,0.5);
         position: absolute;
         font-size: 2rem;
         top: 15%;
-        left: 26%;
+        left: 30%;
         text-align: center;
         padding: 10px;
         opacity: 0;
@@ -223,7 +261,7 @@ body {
         position: absolute;
         top: 0;
         right: 0;
-        height: 55vh;
+        height: 46vh;
         width:40vw;
         opacity: 0;
         transition: opacity 1s;
@@ -244,26 +282,31 @@ body {
             z-index: 1;
         }
     }
-
-    .mickeyMouse {
-        position: absolute;
-        bottom: 30%;
-        left: 20%;
-        width: 30%;
-        height: 30%;
-        animation: mickeyMouse 30s ease infinite;
-        z-index: -1;
-    }
 }
 
 
 @media(max-width: 1024px) {
     html .wrapper {
-        width: 60%;
+        width: 65%;
     }
+    body {
 
-    body .descriptionContainer .levelContainer {
-        width: 100%;
+        .gameBoard .clock {
+            
+            .timer,
+            .count {
+                padding: 5px;
+            }
+
+            button {
+                font-size: 3rem;
+                padding: 5px;
+            }
+        }
+
+        .descriptionContainer .levelContainer {
+            width: 100%;
+        }
     }
 }
 
@@ -276,22 +319,6 @@ body {
 
         .title {
             height: 22%;
-        }
-
-        .gameBoard {
-            height: 70%;
-    
-            .clock {
-                font-size: 2.5rem;
-    
-                button {
-                    font-size: 2.5rem;
-                }
-            }
-
-            .result h2 {
-                font-size: 11rem;
-            }
         }
 
         .descriptionContainer {
@@ -309,6 +336,22 @@ body {
                     width: 30%;
                     margin-top: 0;
                 }
+            }
+        }
+
+        .gameBoard {
+            height: 70%;
+    
+            .clock {
+                font-size: 2.5rem;
+    
+                button {
+                    font-size: 2.5rem;
+                }
+            }
+
+            .result h2 {
+                font-size: 11rem;
             }
         }
 
@@ -334,26 +377,23 @@ body {
 
     body {
 
-        .gameBoard {
-
-            .clock {
-                font-size: 2.1rem;
-        
-                button {
-                    font-size: 2.1rem;
-                }
+        .gameBoard .clock {
+            font-size: 2rem;
+    
+            button {
+                font-size: 2rem;
             }
-            
-            .result {
-                padding: 15px;
-    
-                 h2 {
-                     font-size: 8rem;
-                 }
-    
-                 p {
-                     font-size: 3rem;
-                 }
+        }
+        
+        .gameBoard .result {
+            padding: 15px;
+
+            h2 {
+                font-size: 8rem;
+            }
+
+            p {
+                font-size: 3rem;
             }
         }
 
@@ -458,41 +498,7 @@ body {
 
 @keyframes firstSnowFlake {
     0% {
-        top: 15%;
-        left: 0;
-    }
-
-    20% {
-        top: 20%;
-        left: -20%;
-    }
-
-    40% {
-        left: -10%;
-    }
-
-    60% {
-        left: -20%
-    }
-
-    70% {
-        left: -10%;
-    }
-
-    80% {
-        left: -20%;
-    }
-
-    100% {
-        top: 15%;
-        left: -30%;
-    }
-}
-
-
-@keyframes secondSnowFlake {
-    0% {
-        top: 15%;
+        top: 35%;
         left: 0;
     }
 
@@ -502,23 +508,57 @@ body {
     }
 
     40% {
-        left: -20%;
+        left: -5%;
     }
 
     60% {
-        left: -30%
+        left: -10%
     }
 
     70% {
-        left: -20%;
+        left: -5%;
     }
 
     80% {
-        left: -30%;
+        left: -15%;
     }
 
     100% {
+        top: 0;
+        left: -10%;
+    }
+}
+
+
+@keyframes secondSnowFlake {
+    0% {
         top: 35%;
-        left: -40%;
+        left: 0;
+    }
+
+    20% {
+        top: 30%;
+        left: 10%;
+    }
+
+    40% {
+        left: 20%;
+    }
+
+    60% {
+        left: 15%
+    }
+
+    70% {
+        left: 20%;
+    }
+
+    80% {
+        left: 10%;
+    }
+
+    100% {
+        top: 5%;
+        left: 20%;
     }
 }
