--- a/partials/_mixin.scss
+++ b/partials/_mixin.scss
@@ -8,6 +8,7 @@
         margin: 0 0 30px;
         box-shadow: 5px 5px 0 blue;
         transition: all 0.5s;
+        background: white;
 
         &:focus,
         &:active,
