--- a/styles/style.css
+++ b/styles/style.css
@@ -239,6 +239,21 @@ html .wrapper {
   margin: 0 auto;
   width: 50%;
 }
+@media (max-width: 1024px) {
+  html .wrapper {
+    width: 65%;
+  }
+}
+@media (max-width: 768px) {
+  html .wrapper {
+    width: 75%;
+  }
+}
+@media (max-width: 420px) {
+  html .wrapper {
+    width: 85%;
+  }
+}
 html img {
   width: 100%;
   height: 100%;
@@ -248,7 +263,7 @@ body {
   font-family: "Cabin Sketch", cursive;
   height: 100vh;
   transition: all 1s;
-  background-image: url(../assets/pexels-photo-1831234.jpeg);
+  background-image: url(../assets/background.jpeg);
   background-size: 100% 100%;
 }
 body .title {
@@ -260,14 +275,24 @@ body .title {
   height: 23%;
   color: blue;
 }
+@media (max-width: 768px) {
+  body .title {
+    height: 22%;
+  }
+}
 body .descriptionContainer {
   color: blue;
 }
-body .descriptionContainer h2 {
+@media (max-width: 768px) {
+  body .descriptionContainer .wrapper {
+    padding: 0;
+  }
+}
+body .descriptionContainer .wrapper h2 {
   font-size: calc(33px + (60 - 33) * ((100vw - 320px) / (1680 - 320)));
   text-align: center;
 }
-body .descriptionContainer p {
+body .descriptionContainer .wrapper p {
   font-size: calc(16px + (25 - 16) * ((100vw - 320px) / (1680 - 320)));
   line-height: 35px;
   text-align: center;
@@ -276,19 +301,25 @@ body .descriptionContainer p {
   margin-bottom: 0;
   height: 15vh;
 }
+@media (max-width: 768px) {
+  body .descriptionContainer .wrapper p {
+    line-height: 30px;
+    width: 100%;
+  }
+}
 @media (max-width: 650px) {
-  body .descriptionContainer p {
+  body .descriptionContainer .wrapper p {
     margin: 0 auto;
     line-height: calc(30px + (35 - 30) * ((100vw - 320px) / (650 - 320)));
   }
 }
-body .descriptionContainer .levelContainer {
+body .descriptionContainer .wrapper .levelContainer {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
   margin: 50px auto 0;
 }
-body .descriptionContainer .levelContainer button {
+body .descriptionContainer .wrapper .levelContainer button {
   font-family: "Cabin Sketch", cursive;
   font-size: 2.5rem;
   border: none;
@@ -299,16 +330,28 @@ body .descriptionContainer .levelContainer button {
   transition: all 0.5s;
   background: white;
 }
-body .descriptionContainer .levelContainer button:focus, body .descriptionContainer .levelContainer button:active, body .descriptionContainer .levelContainer button:hover {
+body .descriptionContainer .wrapper .levelContainer button:focus, body .descriptionContainer .wrapper .levelContainer button:active, body .descriptionContainer .wrapper .levelContainer button:hover {
   transform: translate(2.5px, 2.5px);
   box-shadow: 2.5px 2.5px blue;
 }
-body .descriptionContainer .gameStart {
+@media (max-width: 1024px) {
+  body .descriptionContainer .wrapper .levelContainer {
+    width: 100%;
+  }
+}
+@media (max-width: 768px) {
+  body .descriptionContainer .wrapper .levelContainer {
+    flex-direction: column;
+    width: 30%;
+    margin-top: 0;
+  }
+}
+body .descriptionContainer .wrapper .gameStart {
   display: flex;
   justify-content: center;
   margin-bottom: 100px;
 }
-body .descriptionContainer .gameStart button {
+body .descriptionContainer .wrapper .gameStart button {
   font-family: "Cabin Sketch", cursive;
   font-size: 2.5rem;
   border: none;
@@ -320,7 +363,7 @@ body .descriptionContainer .gameStart button {
   margin-top: 25px;
   background: white;
 }
-body .descriptionContainer .gameStart button:focus, body .descriptionContainer .gameStart button:active, body .descriptionContainer .gameStart button:hover {
+body .descriptionContainer .wrapper .gameStart button:focus, body .descriptionContainer .wrapper .gameStart button:active, body .descriptionContainer .wrapper .gameStart button:hover {
   transform: translate(2.5px, 2.5px);
   box-shadow: 2.5px 2.5px blue;
 }
@@ -328,6 +371,11 @@ body .gameBoard {
   height: 77%;
   position: relative;
   display: none;
+}
+@media (max-width: 768px) {
+  body .gameBoard {
+    height: 70%;
+  }
 }
 body .gameBoard .clock {
   text-align: center;
@@ -337,12 +385,28 @@ body .gameBoard .clock {
   padding: 0;
   margin-bottom: 30px;
 }
+@media (max-width: 768px) {
+  body .gameBoard .clock {
+    font-size: 2.5rem;
+  }
+}
+@media (max-width: 420px) {
+  body .gameBoard .clock {
+    font-size: 2rem;
+  }
+}
 body .gameBoard .clock .count,
 body .gameBoard .clock .timer {
   margin: 0;
   background: white;
   border-radius: 50px;
   padding: 0.3% 1%;
+}
+@media (max-width: 1024px) {
+  body .gameBoard .clock .count,
+body .gameBoard .clock .timer {
+    padding: 5px;
+  }
 }
 body .gameBoard .clock button {
   font-family: "Cabin Sketch", cursive;
@@ -357,6 +421,22 @@ body .gameBoard .clock button {
 body .gameBoard .clock button:focus, body .gameBoard .clock button:active, body .gameBoard .clock button:hover {
   transform: translate(2.5px, 2.5px);
   box-shadow: 2.5px 2.5px blue;
+}
+@media (max-width: 1024px) {
+  body .gameBoard .clock button {
+    font-size: 3rem;
+    padding: 5px;
+  }
+}
+@media (max-width: 768px) {
+  body .gameBoard .clock button {
+    font-size: 2.5rem;
+  }
+}
+@media (max-width: 420px) {
+  body .gameBoard .clock button {
+    font-size: 2rem;
+  }
 }
 body .gameBoard .clock .bonusTime {
   opacity: 0;
@@ -398,9 +478,9 @@ body .gameBoard .container .card .front {
   -webkit-backface-visibility: hidden;
           backface-visibility: hidden;
   transition: all 0.5s;
+  transform: rotateY(-180deg);
 }
 body .gameBoard .container .card .back {
-  transform: rotateY(-180deg);
   position: absolute;
   -webkit-backface-visibility: hidden;
           backface-visibility: hidden;
@@ -423,14 +503,35 @@ body .gameBoard .result {
   height: 50vh;
   text-align: center;
 }
+@media (max-width: 420px) {
+  body .gameBoard .result {
+    padding: 15px;
+  }
+}
 body .gameBoard .result h2 {
   font-size: 14rem;
   margin: 0 0 30px;
   z-index: 2;
 }
+@media (max-width: 768px) {
+  body .gameBoard .result h2 {
+    font-size: 11rem;
+    margin-bottom: 0;
+  }
+}
+@media (max-width: 420px) {
+  body .gameBoard .result h2 {
+    font-size: 8rem;
+  }
+}
 body .gameBoard .result p {
   font-size: 4rem;
   z-index: 2;
+}
+@media (max-width: 420px) {
+  body .gameBoard .result p {
+    font-size: 3rem;
+  }
 }
 body .gameBoard .result .playAgain {
   font-family: "Cabin Sketch", cursive;
@@ -468,6 +569,17 @@ body .alidin {
   opacity: 0;
   transition: opacity 1s;
 }
+@media (max-width: 768px) {
+  body .alidin {
+    height: 45vh;
+    width: 45vw;
+  }
+}
+@media (max-width: 420px) {
+  body .alidin {
+    width: 50vw;
+  }
+}
 body .textMatch {
   background: rgba(98, 162, 224, 0.5);
   position: absolute;
@@ -479,6 +591,14 @@ body .textMatch {
   opacity: 0;
   color: blue;
   margin: 0;
+}
+@media (max-width: 768px) {
+  body .textMatch {
+    top: 18%;
+    font-size: 1.6rem;
+    left: 15%;
+    padding: 5px;
+  }
 }
 body .elsa {
   position: absolute;
@@ -503,175 +623,18 @@ body .elsa .snowFlake:nth-child(even) {
   animation: secondSnowFlake 2.5s ease 1;
   z-index: 1;
 }
-
-@media (max-width: 1024px) {
-  html .wrapper {
-    width: 65%;
-  }
-
-  body .gameBoard .clock .timer,
-body .gameBoard .clock .count {
-    padding: 5px;
-  }
-  body .gameBoard .clock button {
-    font-size: 3rem;
-    padding: 5px;
-  }
-  body .descriptionContainer .levelContainer {
-    width: 100%;
-  }
-}
 @media (max-width: 768px) {
-  html .wrapper {
-    width: 70%;
-  }
-
-  body .title {
-    height: 22%;
-  }
-  body .descriptionContainer .wrapper {
-    padding: 0;
-  }
-  body .descriptionContainer .wrapper p {
-    line-height: 30px;
-    width: 100%;
-  }
-  body .descriptionContainer .wrapper .levelContainer {
-    flex-direction: column;
-    width: 30%;
-    margin-top: 0;
-  }
-  body .gameBoard {
-    height: 70%;
-  }
-  body .gameBoard .clock {
-    font-size: 2.5rem;
-  }
-  body .gameBoard .clock button {
-    font-size: 2.5rem;
-  }
-  body .gameBoard .result h2 {
-    font-size: 11rem;
-  }
-  body .textMatch {
-    top: 18%;
-    font-size: 1.6rem;
-    left: 15%;
-    padding: 5px;
-  }
-  body .alidin,
-body .elsa {
+  body .elsa {
     height: 45vh;
     width: 45vw;
   }
 }
 @media (max-width: 420px) {
-  html .wrapper {
-    width: 85%;
-  }
-
-  body .gameBoard .clock {
-    font-size: 2rem;
-  }
-  body .gameBoard .clock button {
-    font-size: 2rem;
-  }
-  body .gameBoard .result {
-    padding: 15px;
-  }
-  body .gameBoard .result h2 {
-    font-size: 8rem;
-  }
-  body .gameBoard .result p {
-    font-size: 3rem;
-  }
-  body .descriptionContainer .wrapper {
-    margin-bottom: 100px;
-  }
-  body .descriptionContainer .wrapper h2 {
-    margin-top: 0;
-  }
-  body .descriptionContainer .wrapper .levelContainer {
-    width: 55%;
-  }
-  body .alidin,
-body .elsa {
+  body .elsa {
     width: 50vw;
   }
 }
-@keyframes mickeyMouse {
-  0% {
-    bottom: 35%;
-    left: 25%;
-  }
-  5% {
-    bottom: 32.5%;
-    left: 22.5%;
-  }
-  10% {
-    bottom: 30%;
-    left: 20%;
-  }
-  15% {
-    bottom: 27.5%;
-    left: 17.5%;
-  }
-  20% {
-    bottom: 25%;
-    left: 15%;
-  }
-  25% {
-    bottom: 22.5%;
-    left: 12.5%;
-  }
-  30% {
-    bottom: 20%;
-    left: 10%;
-  }
-  35% {
-    left: 12.5%;
-  }
-  40% {
-    left: 15%;
-  }
-  50% {
-    left: 17.5%;
-  }
-  55% {
-    left: 20%;
-  }
-  60% {
-    left: 22.5%;
-  }
-  65% {
-    left: 25%;
-  }
-  70% {
-    bottom: 22.5%;
-    left: 27.5%;
-  }
-  75% {
-    bottom: 25%;
-    left: 30%;
-  }
-  80% {
-    bottom: 27.5%;
-    left: 32.5%;
-  }
-  85% {
-    bottom: 30%;
-    left: 35%;
-  }
-  90% {
-    left: 37.5%;
-  }
-  95% {
-    left: 40%;
-  }
-  100% {
-    bottom: 32.5%;
-  }
-}
+
 @keyframes firstSnowFlake {
   0% {
     top: 35%;
